--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<head>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
 
 <div class="home">
 
