--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,26 +21,23 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
+ #       <ul class="social-media-list">
+          
+          {%- include social.html -%}
+          
+#          {% if site.github_username %}
+#          <li>
+#            {% include icon-github.html username=site.github_username %}
+#          </li>
+#          {% endif %}
 
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
+#          {% if site.twitter_username %}
+#          <li>
+#            {% include icon-twitter.html username=site.twitter_username %}
+#          </li>
+#          {% endif %}
           
-          {% if site.instagram_username %}
-          <li>
-            {% include icon-instagram.html username=site.instagram_username %}
-          </li>
-          {% endif %}
-          
-        </ul>
+#        </ul>
       </div>
 
       <div class="footer-col footer-col-3">
