--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,11 +21,11 @@
       </div>
 
       <div class="footer-col footer-col-2">
- #       <ul class="social-media-list">
+ <!--       <ul class="social-media-list"> -->
           
           {%- include social.html -%}
           
-#          {% if site.github_username %}
+<!--          {% if site.github_username %}
 #          <li>
 #            {% include icon-github.html username=site.github_username %}
 #          </li>
@@ -37,7 +37,8 @@
 #          </li>
 #          {% endif %}
           
-#        </ul>
+#        </ul> -->
+        
       </div>
 
       <div class="footer-col footer-col-3">
