--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <head>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
 <div class="home">
