--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 </script>
 
 
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
