--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,5 @@
 
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<!--	<link rel="stylesheet" type="text/css" href="/css/main.css"> -->
 </head>
