--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,8 @@
 
   gtag('config', 'UA-128483821-1');
 </script>
-
-
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css"> 
+	<link href="/css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/css/main.css"> 
 </head>
