--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
     {%- if titles_size > 0 -%}
-      <nav class="site-nav">
+      <nav class="nav nav-pills pull-right">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
