--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,10 @@ h3.text-muted a:hover { text-decoration: none; color: #0088cc; }
 img.avatar { margin-bottom: 30px; }
 		
 /* Custom container */
-.container .page-content > hr { margin: 30px 0; }
-.container .page-content > hr.footer {margin-bottom: 15px; }
+.container > hr { margin: 30px 0; }
+.container > hr.footer {margin-bottom: 15px; }
+.page-content > hr { margin: 30px 0; }
+.page-content > hr.footer {margin-bottom: 15px; }
 
 /* E-Mail */
 .obfuscate { unicode-bidi: bidi-override; direction: rtl; }
