Fixing CSS issues

--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,8 @@ img.avatar { margin-bottom: 30px; }
 /* Custom container */
 .container > hr { margin: 30px 0; }
 .container > hr.footer {margin-bottom: 15px; }
-.page-content > hr { margin: 30px 0; }
-.page-content > hr.footer {margin-bottom: 15px; }
+.page-content { width: 70%; }
+
 
 /* E-Mail */
 .obfuscate { unicode-bidi: bidi-override; direction: rtl; }
