--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
-            <a class="nav nav-pills pull-right" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            <ul class="nav nav-pills pull-right">
+	            <li class="{{ page.cv }}"><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li></ul>
             {%- endif -%}
           {%- endfor -%}
   </div>
