--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="footer">
 
   <!--  <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
 
-    <div class="footer-col-wrapper">
+    <div class="row">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>
