--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
 
-  <div class="footer">
+  <div class="site-footer">
 
   <!--  <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
 
