Fixing CSS issues

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,5 @@
 </script>
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/css/main.css"> 
+	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 </head>
