--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,8 @@
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
+  {%- seo -%}
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128483821-1"></script>
 <script>
@@ -11,4 +15,5 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+	{%- feed_meta -%}
 </head>
