--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,15 +3,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%}
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128483821-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128483821-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-  gtag('config', 'UA-128483821-1');
-</script>
+		gtag('config', 'UA-128483821-1');
+	</script>
+	{%- endif -%}
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
