--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,6 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-	{%- feed_meta -%}
+	
+<!--	{%- feed_meta -%} -->
 </head>
