--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,5 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-	
+	 <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="Latest 10 blog posts (atom)" />
 </head>
