Added avatar to site title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
 	</script>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Code:300,600|Fira+Sans:100,100i,200,200i,400,400i&display=swap" 
+      rel="stylesheet">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 	 <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="Latest 10 blog posts (atom)" />
