--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,10 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <div class="title-block">
+    	<a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+    	<img src="/assets/andy.jpg" WIDTH="36" ALT="author avatar" />
+    	{{ site.title | escape }}</a>
 
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
@@ -26,6 +29,7 @@
           {%- endfor -%}
         </div>
       </nav>
+    </div>      
     {%- endif -%}
   </div>
 </header>
