--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,19 +2,45 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: "Fira Sans", sans-serif !default;
 $base-font-size:   16px !default;
-$base-font-weight: 400 !default;
-$small-font-size:  $base-font-size * 0.875 !default;
+$base-font-weight: 200 !default;
+$small-font-size:  $base-font-size * 0.8 !default;
 $base-line-height: 1.5 !default;
+
+$code-font-family: "Fira Code", monospace !default;
+$code-font-weight: 300;
+$code-font-size:   90%;
+$code-line-height: 1.4;
+
+pre, code {
+  font-family: $code-font-family;
+  font-size: $code-font-size;
+  font-weight: $code-font-weight;
+  line-height: $code-line-height;
+}
+
+.highlight .o, .highlight .k {
+  font-weight: 200%;
+}
+
+// $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+// $base-font-size:   16px !default;
+// $base-font-weight: 400 !default;
+// $small-font-size:  $base-font-size * 0.875 !default;
+// $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$text-color:       #3c484e !default;
 $background-color: #fdfdfd !default;
+$grey-color:       #828282 !default;
+
+// $text-color:       #111 !default;
+// $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
-$grey-color:       #828282 !default;
+// $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
