Updated site logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <div class="title-block">
     	<a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-    	<img src="/assets/andy.jpg" WIDTH="36" ALT="author avatar" />
+    	<img src="/assets/wookie.png" WIDTH="36" ALT="author avatar" />
     	{{ site.title | escape }}</a>
 
     {%- if titles_size > 0 -%}
