Changed Homepage to show post content

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
         <p>
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </p>
-	<!-- 	{{ post.content }} -->
+		{{ post.content }} 
 
         
       </li>
